static folder i think is the move

--- a/layouts/resume.html
+++ b/layouts/resume.html
@@ -244,7 +244,7 @@
     <div class="text-center">
       <a
         class="inline-block !rounded-md bg-primary-600 px-4 py-1 !text-neutral !no-underline hover:!bg-primary-500 dark:bg-primary-800 dark:hover:!bg-primary-700"
-        href='/resume/artifacts/{{ path.Base (replace .Params.resumeTemplate "yml" "pdf") }}'
+        href='/static/{{ path.Base (replace .Params.resumeTemplate "yml" "pdf") }}'
         role="button"
         download>
         Download
